2008-10-04  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcoutplugin.h
	* libs/dmx4linuxout/configuredmx4linuxout.cpp
	* libs/dmx4linuxout/dmx4linuxout.cpp
	* libs/dmx4linuxout/dmx4linuxout.h
	* libs/dmx4linuxout/dmx4linuxout.pro
	* libs/libs.pro
	* libs/llaout/configurellaout.cpp
	* libs/llaout/configurellaout.h
	* libs/llaout/configurellaout.ui
	* libs/llaout/llaout.cpp
	* libs/llaout/llaout.h
	* libs/llaout/llaout.pro
	* libs/usbdmxout/configureusbdmxout.cpp
	* libs/usbdmxout/usbdmxout-win32.cpp
	* libs/usbdmxout/usbdmxout-win32.h
	* main/dummyoutplugin.cpp
	* main/dummyoutplugin.h
	* main/outputmap.cpp

	Removed int return type from output plugin's read&write methods.
	Added output parameter to output plugin's read&write methods.
	
2008-10-04  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/usbdmxout/usbdmxdevice-win32.cpp
	* libs/usbdmxout/usbdmxdevice-win32.h
	* libs/usbdmxout/usbdmxout-win32.cpp

	Implemented read/writeRange methods.
	
2008-10-04  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/usbdmxout/configureusbdmxout.cpp
	* libs/usbdmxout/usbdmxdevice-win32.cpp
	* libs/usbdmxout/usbdmxdevice-win32.h
	* libs/usbdmxout/usbdmxout-win32.cpp
	* libs/usbdmxout/usbdmxout-win32.h

	Fixed usbdmxout to work on windows with the modified output plugin arch
	
2008-10-02  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcoutplugin.h:
	* libs/dmx4linuxout/dmx4linuxout.cpp:
	* libs/dmx4linuxout/dmx4linuxout.h:
	* libs/llaout/llaout.cpp:
	* libs/llaout/llaout.h:
	* libs/usbdmxout/usbdmxout-unix.cpp:
	* libs/usbdmxout/usbdmxout-unix.h:
	* libs/usbdmxout/usbdmxout-win32.cpp:
	* libs/usbdmxout/usbdmxout-win32.h:
	* main/dummyoutplugin.cpp:
	* main/dummyoutplugin.h:
	* main/outputmanager.cpp:
	* main/outputmap.h:
	* main/outputpatcheditor.cpp:
	* main/outputpatcheditor.h:

	Added output parameter to QLCOutPlugin::infoText().

2008-10-01  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/dmx4linuxout/dmx4linuxout.cpp: